Fix the css width overflow
The page had 10px off screen causing janking nav for horzontail
scrolling

--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 2fr 1fr;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .center {
